# Reff_App

./: .gitignore  README.md  package-lock.json  package.json
backend/: pyproject.toml
backend/app/: config.py  main.py  models.py  utils.py
backend/app/routers/: fixtures.py  report.py
backend/app/services/: email.py  parser.py  scraper.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.js
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  config.ts  index.css  main.tsx  types.ts
frontend/src/components/: FixtureCartRow.tsx  Header.tsx  IncidentSection.tsx
frontend/src/context/: ShiftCartContext.tsx
frontend/src/hooks/: useFixtures.ts  useGameResults.ts  useGameTimer.ts  useSettings.ts  useShiftCart.ts  useShiftFixtures.ts  useShiftHistory.ts
frontend/src/pages/: FixturesPage.tsx  GamePage.tsx  HistoryPage.tsx  SettingsPage.tsx  ShiftBuilderPage.tsx  ShiftPage.tsx
frontend/src/services/: FixtureParser.tsx  api.ts  shiftUtils.ts
frontend/src/storage/: index.ts
frontend/src/utils/: dateUtils.ts  shiftUtils.test.ts  shiftUtils.ts
frontend/src/views/: FixturesPageView.tsx
